[package]
name = "sleppa_context"
description = "Thread-safe execution context management package"
version = "0.1.0"
edition = "2021"

# ---------------------------------------------------------------------------------------------------------------------
# Targets configuration
# ---------------------------------------------------------------------------------------------------------------------

# Context library
[lib]
path = "src/lib.rs"

# ---------------------------------------------------------------------------------------------------------------------
# Package features
# ---------------------------------------------------------------------------------------------------------------------

[features]

# ---------------------------------------------------------------------------------------------------------------------
# Package dependencies
# ---------------------------------------------------------------------------------------------------------------------

[dependencies]
